<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.fcffaf.android.geoquiz.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_gravity="center_horizontal"
        android:id="@+id/question_text_view"
        android:layout_marginTop="10dp"
        android:textSize="20sp"

         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/true_button"
            android:text="@string/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/false_button"
            android:text="@string/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/cheat_button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/next_button"
            android:text="@string/next_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/lock1"
            android:drawablePadding="15dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/prev_button"
            android:drawableLeft="@drawable/setting"
            android:text="@string/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>
